reports edited by Kamal

--- a/indipco/public/css/akwad-desk.css
+++ b/indipco/public/css/akwad-desk.css
@@ -89,3 +89,6 @@ html[data-theme='light'] .timeline-message-box .text-color .text-muted {
     font-weight: 400;
     font-size: 90%;
 }
+.layout-side-section {
+    display: none!important;
+}
