report attendance sheet finalysed

--- a/indipco/public/css/akwad-desk.css
+++ b/indipco/public/css/akwad-desk.css
@@ -90,5 +90,5 @@ html[data-theme='light'] .timeline-message-box .text-color .text-muted {
     font-size: 90%;
 }
 .layout-side-section {
-    display: none!important;
+    display: none;
 }
