--- a/indipco/public/css/akwad-desk.css
+++ b/indipco/public/css/akwad-desk.css
@@ -34,7 +34,7 @@ html[data-theme='light'] .form-grid {
 
 html[data-theme='light'] .widget {
     box-shadow: 1px 2px 4px #f0f4f7;
-    background-color: #ebeff2;
+    background-color: #E8E5E5;
     border: 1px solid #d1d8dd;
 }
 
@@ -91,4 +91,39 @@ html[data-theme='light'] .timeline-message-box .text-color .text-muted {
 }
 .layout-side-section {
     display: none;
+}
+
+li[style*="direction: rtl;"] span:before {
+	margin-right: -1.5em !important;
+	margin-left: 0.3em !important;
+}
+
+li[style*="direction: rtl;"] {
+	padding-right: 1.5em !important;
+	padding-left: 0 !important;
+}
+
+li[style*="direction: rtl;"].ql-indent-1 {
+	padding-right: 4.5em !important;
+	padding-left: 0 !important;
+}
+
+li[style*="direction: rtl;"].ql-indent-2 {
+	padding-right: 7.5em !important;
+	padding-left: 0 !important;
+}
+
+li[style*="direction: rtl;"].ql-indent-3 {
+	padding-right: 10.5em !important;
+	padding-left: 0 !important;
+}
+
+li[style*="direction: rtl;"].ql-indent-4 {
+	padding-right: 13.5em !important;
+	padding-left: 0 !important;
+}
+
+li[style*="direction: rtl;"].ql-indent-5 {
+	padding-right: 16.5em !important;
+	padding-left: 0 !important;
 }
